# flakes

./: .drone.star  .drone.yml  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .sops.yaml  LICENSE  ci.nix  flake.nix  ud  udo q  version
.github/workflows/: nix.yml
blog/: .gitignore  book.toml
blog/scripts/: visualize-flights.py
blog/src/: SUMMARY.md  about.md  friends.md  services.md
compat/nixpkgs/: default.nix
fn/: alert.ts  config.capnp  index.py  index.ts  rait.js  rants.js  rants.ts  woff.ts
fn/meow/: Cargo.toml
fn/meow/src/: bip39.rs  main.rs
fn/oproxy/: Cargo.toml
fn/oproxy/src/: main.rs
hydra/: misc.json  nixos.json
infra/: .gitignore  gandi.tf  hcloud.tf  hydra.tf  keycloak.tf  minio.tf  nodes.tf  oci.tf  output.tf  remote-install  scaleway.tf  secrets.tf  secrets.yaml  terraform.tfstate  tfstate.json  tfstate.sops  versions.tf  vultr.tf
infra/adsb/: .env  docker-compose.yml  secrets.env  up
infra/installer/: .gitignore  build.ninja
modules/: baseline.nix  buyvm.nix  caddy.nix  chasquid.nix  default.nix  divi.nix  gateway.nix  gravity.nix  image.nix  influxdb2.nix  kernel.nix  metrics.nix  ssh.nix  stalwart.nix  vultr.nix
modules/backup/: default.nix  secrets.yaml
modules/bgp/: default.nix  secrets.yaml
modules/cloud/: cluster.nix  common.nix  disko-uefi.nix  disko.nix  filesystems.nix  services.nix
modules/dns/: coredns.patch  default.nix  knot.conf  secrets.yaml
modules/gravity/: default.nix  registry.json  secrets.yaml
modules/gravity-ng/: default.nix
modules/metrics/: default.nix  secrets.yaml
modules/shadowsocks/: default.nix  secrets.yaml
modules/ss/: default.nix  secrets.yaml
modules/sshcert/: default.nix  secrets.yaml
modules/sshfp/: default.nix  secrets.yaml
modules/telegraf/: default.nix  secrets.yaml
modules/v2ray/: default.nix  secrets.yaml
nixos/: alacritty.nix  battery  configuration.nix  default.nix  gravity.nix  hardware.nix  home.nix  image.nix  local.asc  secrets.yaml
nixos/armchair/: configuration.nix  default.nix  gravity.nix  hardware-configuration.nix
nixos/firecracker/: configuration.nix  default.nix
nixos/hcloud/: common.nix
nixos/hel0/: alert.tmpl  configuration.nix  default.nix  dovecot.nix  git.nix  hardware.nix  knot.conf  maddy.conf  maddy.nix  matrix.nix  opensmtpd.nix  postfix.nix  prometheus.nix  secrets.yaml  services.nix  vaultwarden.nix  zones.yaml
nixos/hydra/: default.nix  hydra.nix  secrets.yaml
nixos/iad0/: cgit.nix  configuration.nix  default.nix  knot.conf  knot.nix  postfix.nix  secrets.yaml
nixos/las0/: configuration.nix  db.co.nichi  default.nix  minio.nix  n8n.nix  secrets.yaml  services.nix
nixos/local/: 0001-tpm2_context_init-fix-driver-name-checking.patch  alacritty.yml  configuration.nix  (+14 more)
pkgs/: default.nix  nvfetcher.toml  sources.nix
zones/: common.nix  data.json  dnscontrol.jq  glue.fish  glue.py  nichi.co.nix  nichi.link.nix  nodes.json  parking.nix  really-save-nix-together.org.nix  registry.jq  scp.link.nix  secrets.yaml  wikipedia.zip.nix
(+254 files in other folders)
