[package]
name = "meow"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
axum = "0.8.1"
tower-http = { version = "0.6.2", features = [ "fs", "limit" ] }
rand = "0.8.5"
futures = "0.3.31"
tokio = { version = "1.42.0", features = [ "full" ] }
tokio-util = { version = "0.7.13", features = [ "compat" ] }
url = "2.5.4"
argh = "0.1.13"
lazy_static = "1.5.0"
infer = "0.19.0"
