[package]
name = "meow"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
axum = "0.8.7"
tower-http = { version = "0.6.7", features = [ "fs", "limit" ] }
rand = "0.9.2"
futures = "0.3.31"
tokio = { version = "1.48.0", features = [ "full" ] }
tokio-util = { version = "0.7.17", features = [ "compat" ] }
url = "2.5.7"
argh = "0.1.13"
lazy_static = "1.5.0"
infer = "0.19.0"
