[package]
name = "meow"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
axum = "0.8.9"
tower-http = { version = "0.6.10", features = [ "fs", "limit" ] }
rand = "0.10.1"
futures = "0.3.32"
tokio = { version = "1.52.3", features = [ "full" ] }
tokio-util = { version = "0.7.18", features = [ "compat" ] }
url = "2.5.8"
argh = "0.1.19"
lazy_static = "1.5.0"
infer = "0.19.0"
