[package]
name = "oproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
aws-config = "1.5.10"
aws-sdk-s3 = "1.65.0"
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["async-read-body"] }
clap = { version = "4.5.23", features = ["env", "derive"] }
thiserror = "2.0.7"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
