[package]
name = "oproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
aws-config = "1.5.13"
aws-sdk-s3 = "1.68.0"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["async-read-body"] }
clap = { version = "4.5.23", features = ["env", "derive"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
