[package]
name = "oproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
aws-config = "1.8.16"
aws-sdk-s3 = "1.132.0"
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["async-read-body"] }
clap = { version = "4.6.1", features = ["env", "derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.10", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
